caption placement thanks to @maksimt
From gonsie/rpi-thesis-resources#2

--- a/thesis.tex
+++ b/thesis.tex
@@ -10,7 +10,17 @@
 \usepackage{hyperref} % links within the document
 \usepackage{graphicx} % insert graphical files
 
+%% packages to automate the placement of captions below Figures, above Tables, and the bolding of these captions.
+% Note: if you will also \usepackage{algorithm} or another package that will call \usepackage{float}
+%       you must invoke those use-packages AFTER you invoke \usepackage{floatrow}
+\usepackage[font=bf,labelfont=bf,labelsep=colon,justification=centerlast]{caption}
+\usepackage{floatrow}
+\usepackage[tableposition=top]{caption}
+\floatsetup[table]{capposition=top}
+\usepackage[margin=1in]{geometry}
+
 %% ADD OTHER PACKAGES HERE
+%\usepackage{algorithm}
 
 % ------------------------
 % Attribution of previously published work
